# selenium_web_automation_tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: app.py  config.yaml
selenium_web_automation_tools/: custom_inputter.py  custom_scraper.py  selenium_utils.py
